--- a/ANN_Scratch/layers.ipynb
+++ b/ANN_Scratch/layers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPJdzznJdkiJAjCyIzgseU",
+      "authorship_tag": "ABX9TyN7SePq7Ij6IiKEDnBAdaAH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "-VEresgh6ytl"
       },
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "NWRSaLWo7rnW"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -109,11 +109,11 @@
         "\n",
         "  @property\n",
         "  def weights(self):\n",
-        "    return self.weights\n",
+        "    return self._weights\n",
         "  \n",
         "  @property\n",
         "  def bias(self):\n",
-        "    return self.bias\n",
+        "    return self._bias\n",
         "\n",
         "  @property\n",
         "  def output(self):\n",
@@ -138,14 +138,14 @@
         "\n",
         "  def build(self,input_tensor:np.ndarray):\n",
         "    self._input_units = input_tensor.shape[0]\n",
-        "    self.weights = np.random.randn(self._units,self._input_units)*self._weight_kernel()\n",
-        "    self.bias = np.zeros((self._units,1))\n",
+        "    self._weights = np.random.randn(self._units,self._input_units)*self._weight_kernel()\n",
+        "    self._bias = np.zeros((self._units,1))\n",
         "\n",
         "  def __call__ (self,input_tensor:np.ndarray)->np.ndarray:\n",
-        "    if self.weights is None:\n",
+        "    if self._weights is None:\n",
         "      self.build(input_tensor=input_tensor)\n",
         "\n",
-        "    self._output = np.dot(self.weights,input_tensor) + self.bias\n",
+        "    self._output = np.dot(self._weights,input_tensor) + self._bias\n",
         "    return self._output\n",
         "\n",
         "  def update (self, learning_rate:float):\n",
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "NeJ_pJJ0AqLg"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
