--- a/ANN_Scratch/activation.ipynb
+++ b/ANN_Scratch/activation.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3/2hGparZmwmCfOxcdm0u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "8CP1zmfogMPs"
       },
@@ -54,7 +53,7 @@
       "metadata": {
         "id": "g7TB55Bqg_X4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +72,7 @@
       "metadata": {
         "id": "snL0VmCHhyO_"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +81,7 @@
         "class Relu(Activation):\n",
         "\n",
         "  # Relu(x) = max(x,0)\n",
-        "  def __call_(self,input_tensor:np.ndarray)->np.ndarray:\n",
+        "  def __call__(self,input_tensor:np.ndarray)->np.ndarray:\n",
         "    return np.maximum(input_tensor,0)\n",
         "\n",
         "  # d/dx(Relu(x)) = (0, if x < 0) || (1, if x >= 0)\n",
@@ -95,7 +94,7 @@
       "metadata": {
         "id": "BWpUW6ulbqV5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +103,7 @@
         "class Linear(Activation):\n",
         "\n",
         "  # Linear(x) = x\n",
-        "  def __call_(self,input_tensor:np.ndarray)->np.ndarray:\n",
+        "  def __call__(self,input_tensor:np.ndarray)->np.ndarray:\n",
         "    return input_tensor\n",
         "\n",
         "  # d/dx(Linear(x)) = 1\n",
@@ -114,7 +113,7 @@
       "metadata": {
         "id": "01a1-bpOdgq4"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +130,7 @@
       "metadata": {
         "id": "fO2rGpF3eEh9"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
